--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  json_annotation: ^2.0.0
 
   # http请求库
   dio: ^3.0.9
 
+  # webview
+  webview_flutter: ^0.3.22
+  flutter_statusbar_manager : ^1.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
